www resume: fix alignment of some items on the left

--- a/sites/www/root/style.css
+++ b/sites/www/root/style.css
@@ -101,6 +101,12 @@ details > summary {
     width: fit-content;
 }
 
+header > span,
+section > p,
+details {
+    margin-left: 0.2em;
+}
+
 header div {
     display: flex;
     flex-direction: column;
